# rust-secure-systems

./: Cargo.toml  NOTICE  README.md  book.toml  deny.toml
.github/workflows/: verify.yml
book/: 404.html  foreword.html  index.html  print.html  searcher-c2a407aa.js  searchindex-03771ea9.js  searchindex-0f618b86.js  searchindex-15e3f9e1.js  searchindex-1e392eed.js  searchindex-1e603e64.js  searchindex-2b348c00.js  searchindex-2cecf79f.js  searchindex-2e94a7f6.js  searchindex-39b9ec4d.js  searchindex-3a7071da.js  searchindex-447f5f1b.js  searchindex-4eadad39.js  searchindex-59ef4693.js  searchindex-5f8c8b06.js  searchindex-6232f64b.js  searchindex-65a83bc4.js  searchindex-709c88b3.js  searchindex-747996ab.js  searchindex-7e9b88b0.js  searchindex-802dd986.js  searchindex-8d2f1d10.js  searchindex-94f12764.js  searchindex-99189ef3.js  searchindex-b248e72e.js  searchindex-b46b394a.js  searchindex-b568d221.js  searchindex-b89c1476.js  searchindex-baab6fb8.js  searchindex-c19d9d0a.js  searchindex-d8002632.js  searchindex-df55a967.js  searchindex-e0d16163.js  searchindex-e8aead48.js  searchindex-f5c611d8.js  toc-8e63d631.js  (+2 more)
book-snippets/: lib.rs
book/part1/: ch01-why-rust.html  ch02-setup.html  ch03-ownership.html  ch04-types.html
book/part2/: ch05-errors.html  ch06-concurrency.html  ch07-validation.html  ch08-crypto.html
book/part3/: ch09-unsafe.html  ch10-ffi.html  ch11-memory.html  ch12-networking.html
book/part4/: ch13-testing.html  ch14-fuzzing.html  ch15-auditing.html  ch16-supply-chain.html
book/part5/: ch17-tcp-server.html  ch18-parser.html  ch19-hardening.html
book/theme/: brand-2df87166.css
companion/ch10-ffi/: Cargo.toml
companion/ch10-ffi/src/: lib.rs
companion/ch12-networking/: Cargo.toml
companion/ch12-networking/src/: lib.rs
companion/ch17-hardened-server/: Cargo.toml
companion/ch17-hardened-server/src/: handler.rs  lib.rs  main.rs  rate_limiter.rs  tls.rs  types.rs
companion/ch19-hardening/: Cargo.toml
companion/ch19-hardening/src/: lib.rs  logging.rs  metrics.rs  privileges.rs  secrets.rs  security_events.rs
scripts/: test-book-snippets.cmd  test-book-snippets.ps1  test-book-snippets.sh
src/: SUMMARY.md  foreword.md
src/part1/: ch01-why-rust.md  ch02-setup.md  ch03-ownership.md  ch04-types.md
src/part2/: ch05-errors.md  ch06-concurrency.md  ch07-validation.md  ch08-crypto.md
src/part3/: ch09-unsafe.md  ch10-ffi.md  ch11-memory.md  ch12-networking.md
src/part4/: ch13-testing.md  ch14-fuzzing.md  ch15-auditing.md  ch16-supply-chain.md
src/part5/: ch17-tcp-server.md  ch18-parser.md  ch19-hardening.md
