[package]
name = "ch17-hardened-server"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[dependencies]
env_logger.workspace = true
log.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true

[dev-dependencies]
proptest.workspace = true
