[package]
name = "ch19-hardening"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[dependencies]
hex.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
zeroize.workspace = true

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["user"] }

[dev-dependencies]
tempfile.workspace = true
